--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -1,11 +1,14 @@
 <html>
 <head>
-    <title>Flask Button Example</title>
+    <title>MineSweep</title>
 </head>
 <body>
     <h1>Flask Button Example</h1>
     <form action="/button-clicked" method="post">
-        <button type="submit">Click Me</button>
+        <button type="submit">▢</button> <button type="submit">▢</button>
+    </form>
+    <form action="/button-clicked" method="post">
+        <button type="submit">▢</button> <button type="submit">▢</button>
     </form>
 </body>
 </html>
